added profile picture to github profile page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h1>Hello World!</h1>
+<div style = "width: 600px; margin: auto;">
+<img src= "http://lyndiweener-kuiper.com/img/lyndiweenerkuiper.jpg" style = "width: 35%;"/>
+<h1>Hi there!  I'm Lyndi Weener-Kuiper</h1>
+<p>You can check out my Ruby challenges from my Skillcrush Blueprint <a href = "https://github.com/LyndiLeighWK/ruby-challenges">here</a></p>
+</div>
